Update test to check binaries are created using the ModuleLoader